# vidstream-sandbox

./: CMakeLists.txt  Doxyfile  README.txt
android/res/: Android.mk
build.win/: calibrator.vcxproj  eye_tracker.sln  eye_tracker.vcxproj  eye_tracker_calib.vcxproj  eye_tracker_test01.vcxproj  eye_tracker_test02.vcxproj  face_tracker_test01.vcxproj  profile.bat  receiver02.vcxproj  sender02.vcxproj  vstest.sln
files.cmake/: android-ndk-r5b-toolchain.cmake  android.in.cmake  cmake_install.cmake  codesourcery-toolchain.cmake  codesourcery.in.cmake  rvds.in.cmake
files.cmake/modules/: FindLIBJPEG.cmake
sublime/: vstest.sublime-project
test/: CMakeLists.txt  client.sh  server.sh
test/src/: jpeghelper.c  jpeghelper.h  ndp.cpp  ndp.h  receiver01.cpp  receiver02.cpp  sender01.cpp  sender02.cpp  sender03.cpp  udp_streamer.cpp  udp_wrapper.cpp  udp_wrapper.h  v4l2c.h  v4l2w.c  v4l2w.h
